--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_native_splash: ^2.2.16
   flutter_launcher_icons: ^0.11.0
   confetti: ^0.7.0
+  page_transition: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
